<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_centerHorizontal="true"
    android:padding="10dp"
    android:gravity="center"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/historyItem_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/_1"/>

    <TextView
        android:id="@+id/historyItem_weightTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/_33kgs"/>

    <TextView
        android:id="@+id/historyItem_fatTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/_12_reps"/>

</LinearLayout>