<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mad.gymprogress.Fragments.EnterWeightFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/track_weightTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/track_weightEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_weight"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/track_fatTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body_fat"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/track_fatEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_body_fat"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/weight_saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:paddingEnd="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingStart="40dp"
        android:text="@string/save" />

</LinearLayout>
