<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mad.gymprogress.CategoriesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/top_two_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/categories_shoulders"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:onClick="shouldersOnClick"
                android:background="#9DB0C4"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoulders"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/categories_biceps"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#6D9FC7"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biceps"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/middle_two_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout

                android:id="@+id/categories_triceps"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="#6D9FC7"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/triceps"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout

                android:id="@+id/categories_chest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#9DB0C4"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chest"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_two_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"

            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/categories_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="#9DB0C4"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout

                android:id="@+id/categories_abs"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#6D9FC7"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abs"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/very_bottom_two_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/categories_legs"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="#6D9FC7"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legs"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout

                android:id="@+id/categories_cardio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#9DB0C4"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardio"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
